# HDR-Merge

./: .gitignore  Alignment Test.md  TODO.md  Untitled.ipynb  build.bat  config.json.bak  exe_paths.json  hdr_brackets.py  nuitka-crash-report.xml  ptgui_11_jpg_to_hdr.py  ptgui_jpg_to_hdr.py  pyproject.toml  readme.md  requirements.txt  setup.py  timing.md
.ipynb_checkpoints/: hdr_brackets-checkpoint.py
blender/: HDR_Merge.blend  blender_merge.py
src/: center.py  cli.py  config.py  constants.py  hdr_brackets.py  hdr_brackets_cli.py  main.py
src/gui/: EditProfileDialog.py  HDRMergeMaster.py  PP3ProfileManager.py  SetupDialog.py
src/gui/utils/: __init__.py
src/hdr_merge_master.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/process/: executor.py  folder_analyzer.py  hdr_processor.py  run_subprocess_with_prefix.py
src/utils/: chunks.py  ev_diff.py  get_config.py  get_default_config.py  get_exif.py  notify_phone.py  play_sound.py  read_json.py  save_config.py
