[project]
name = "hdr-merge-master"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "exifread>=3.5.1",
    "plyer>=2.1.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
