[project]
name = "hdr-merge-master"
version = "1.3.0"
description = "A script that uses Blender's compositor to reliably merge exposure brackets to a 32-bit EXR file. "
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "exifread>=3.5.1",
    "opencv-python>=4.13.0.92",
    "plyer>=2.1.0",
]

[dependency-groups]
dev = [
    "nuitka>=4.0.1",
    "pyside6>=6.10.2",
    "ziglang>=0.15.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
